// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sidebar"
  >
    <div
      class="sidebar-header"
    >
      CMS+
    </div>
    <div
      class="collection-types"
    >
      <div
        class="collection-types-header"
      >
        <h4
          class="basic-padding"
        >
          COLLECTION TYPES
        </h4>
      </div>
      <div
        class="content-type"
      >
        <li
          class="basic-padding"
        >
          Hello
        </li>
      </div>
    </div>
    <div
      class="content-type-builder"
      style="background-color: black;"
    >
      <h4
        class="basic-padding"
        style="color: white;"
      >
        CONTENT TYPE BUILDER
      </h4>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sidebar should render correctly with selected 1`] = `
<DocumentFragment>
  <div
    class="sidebar"
  >
    <div
      class="sidebar-header"
    >
      CMS+
    </div>
    <div
      class="collection-types"
    >
      <div
        class="collection-types-header"
      >
        <h4
          class="basic-padding"
        >
          COLLECTION TYPES
        </h4>
      </div>
      <div
        class="content-type"
        style="background-color: black; color: white; font-weight: bolder;"
      >
        <li
          class="basic-padding"
        >
          Hello
        </li>
      </div>
    </div>
    <div
      class="content-type-builder"
    >
      <h4
        class="basic-padding"
      >
        CONTENT TYPE BUILDER
      </h4>
    </div>
  </div>
</DocumentFragment>
`;
